Update third-party support
- Add an Autodesk 3ds Max section to the third-party-support page.
- Add links to the MaterialX Virtual Town Hall at ASWF Open Source Days 2023.

--- a/Contributing.html
+++ b/Contributing.html
@@ -159,6 +159,11 @@
           </ul>
           <ul>
             <li>
+              <a href="ThirdPartySupport.html#Max">Autodesk 3ds Max</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
               <a href="ThirdPartySupport.html#Apple">Apple VisionOS</a>
             </li>
           </ul>
