--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             shading and processing nodes with a precise mechanism for functional extensibility.
           </p>
 
-          <p>The MaterialX library, now at release v1.38.7, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
+          <p>The MaterialX library, now at release v1.38.8, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
 
           <br>
           <h2><strong>Announcements</strong></h2>
@@ -293,17 +293,28 @@
             <div>
               <p>
 
+                <em>Update September 8, 2023:</em>
+                <br><strong>MaterialX Library v1.38.8 has been released</strong>.
+                This release adds a rich set of new pattern nodes to the standard,
+                and is the first MaterialX release with support for iOS builds,
+                drag-and-drop loading in the Web Viewer,
+                and MaterialX Python distribution through PyPI.
+                Please see the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.8">MaterialX Version 1.38.8 release page</a>
+                on the MaterialX Github for further details,
+                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
+                to download the latest library source code, documentation and examples.
+                <br><br>
+
                 <em>Update April 21, 2023:</em>
-                <br><strong>MaterialX Library v1.38.7 has been released</strong>.
+                MaterialX Library v1.38.7 has been released.
                 This release adds the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/GraphEditor.md">MaterialX Graph Editor</a>,
                 an example application for visualizing, creating, and editing MaterialX graphs,
                 and support for the Metal Shading Language in shader generation and rendering.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.7">MaterialX Version 1.38.7 release page</a>
-                on the MaterialX Github for further details,
-                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
-                to download the latest library source code, documentation and examples.
+                on the MaterialX Github for further details.
                 <br><br>
 
                 <em>Update November 4, 2022:</em>
@@ -313,7 +324,7 @@
                 and support for the MaterialX closures in OSL.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.6">MaterialX Version 1.38.6 release page</a>
-                on the MaterialX Github for further details,
+                on the MaterialX Github for further details.
                 <br><br>
 
                 <em>Update July 9, 2022:</em>
@@ -324,7 +335,7 @@
                 and more.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.5">MaterialX Version 1.38.5 release page</a>
-                on the MaterialX Github for further details,
+                on the MaterialX Github for further details.
                 <br><br>
 
                 <em>Update Apr 6, 2022:</em>
