--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             shading and processing nodes with a precise mechanism for functional extensibility.
           </p>
 
-          <p>The MaterialX library, now at release v1.38.8, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
+          <p>The MaterialX library, now at release v1.38.9, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
 
           <br>
           <h2><strong>Announcements</strong></h2>
@@ -308,17 +308,27 @@
             <div>
               <p>
 
+                <em>Update February 26th, 2024:</em>
+                <br><strong>MaterialX Library v1.38.9 has been released</strong>.
+                This version adds support for environment prefiltering on the GPU,
+                integrates improvements to the MaterialX Graph Editor and MaterialX Web Viewer from the ASWF Dev Days community,
+                and introduces the first non-photorealistic rendering node library to MaterialX.
+                Please see the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.9">MaterialX Version 1.38.9 release page</a>
+                on the MaterialX Github for further details,
+                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
+                to download the latest library source code, documentation and examples.
+                <br><br>
+
                 <em>Update September 8, 2023:</em>
-                <br><strong>MaterialX Library v1.38.8 has been released</strong>.
+                MaterialX Library v1.38.8 has been released.
                 This release adds a rich set of new pattern nodes to the standard,
                 and is the first MaterialX release with support for iOS builds,
                 drag-and-drop loading in the Web Viewer,
                 and MaterialX Python distribution through PyPI.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.8">MaterialX Version 1.38.8 release page</a>
-                on the MaterialX Github for further details,
-                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
-                to download the latest library source code, documentation and examples.
+                on the MaterialX Github for further details.
                 <br><br>
 
                 <em>Update April 21, 2023:</em>
