--- a/index.html
+++ b/index.html
@@ -71,25 +71,15 @@
       </div>
       <ul>
         <li>
-          <a href="Specification.html">Specification</a>
+          <a href="Specification.html">MaterialX Specification</a>
           <ul>
             <li>
-              <a href="assets/MaterialX.v1.38.Spec.pdf">MaterialX Spec PDF (v1.38)</a>
+              <a href="Specification.html#CurrentSpec">Current Specification</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="assets/MaterialX.v1.38.PBRSpec.pdf">Physically Based Shading Nodes</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="assets/MaterialX.v1.38.Supplement.pdf">Supplemental Notes PDF</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="Specification.html#RevisionHistory">Specification Revision History</a>
+              <a href="Specification.html#RevisionHistory">Revision History</a>
             </li>
           </ul>
         </li>
@@ -251,7 +241,7 @@
                 <a target="_blank" href="docs/api/index.html">Developer Guide</a>
               </li>
               <li class="">
-                <a target="_blank" href="Specification.html">Specification</a>
+                <a target="_blank" href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/Specification">Specification</a>
               </li>
               <li class="">
                 <a class="blueButton" style="font-size:14px" href="https://github.com/AcademySoftwareFoundation/MaterialX">GitHub</a>
