Add MaterialX 1.38.10 announcement
This changelist adds an announcement for MaterialX 1.38.10, and makes a minor edit to the text of the core specification link.

--- a/Specification.html
+++ b/Specification.html
@@ -274,7 +274,7 @@
             </li>
             <ul>
               <li>
-                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/Specification/MaterialX.Specification.md">MaterialX Standard</a>
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/Specification/MaterialX.Specification.md">Core Specification</a>
               </li>
               <li>
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/Specification/MaterialX.PBRSpec.md">Physically Based Shading Nodes</a>
