--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
 
                 <em>Update April 12th, 2024:</em>
                 <br><strong>MaterialX Library v1.38.10 has been released</strong>.
-                This is primarily a patch build to improve MaterialX integrations in USD, with the one new feature being environment light intensity controls in generated GLSL shaders.
+                This is primarily a patch build to improve MaterialX integrations in USD,
+                with the one new feature being environment light intensity controls in generated GLSL shaders.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.10">MaterialX Version 1.38.10 release page</a>
                 on the MaterialX Github for further details,
